// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`harvests.utils loadYieldEvents encounters an error requesting an standard vault loads yield events from the subgraph 1`] = `
Array [
  Object {
    "amount": 18087.137228369163,
    "apr": 43.08283925122179,
    "balance": 10000000,
    "block": 15396257,
    "earned": 1171558139.6931558,
    "grossApr": 47.869821390246436,
    "timestamp": 1661253900000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "tx": "0x49730f8f1d3aa7915940ec85de53b10e5425cddbf9195c2348f779638eed14dd",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 8273.444229204368,
    "apr": 4.084825017457429,
    "balance": 10000000,
    "block": 15396257,
    "earned": 111079262.22129785,
    "grossApr": 4.538694463841588,
    "timestamp": 1661253900000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "tx": "0x49730f8f1d3aa7915940ec85de53b10e5425cddbf9195c2348f779638eed14dd",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 4261.975371596002,
    "apr": 1.7384462495527824,
    "balance": 10000000,
    "block": 15388629,
    "earned": 47273830.821742855,
    "grossApr": 1.931606943947536,
    "timestamp": 1661148573000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0x6902d5e3d0dc784dac28506ec173727111439ba5dd8a05cfb9c9a7f86137cab5",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 4223.102994638644,
    "apr": 1.7225903301631276,
    "balance": 10000000,
    "block": 15363244,
    "earned": 46842658.416531846,
    "grossApr": 1.9139892557368086,
    "timestamp": 1660800880000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0xba80fa9bdd08636514171ee7c54d6a5420d392111c4b08fa185e9677fea5d647",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 4285.530143667973,
    "apr": 1.7480541664451443,
    "balance": 10000000,
    "block": 15337891,
    "earned": 47535100.35356516,
    "grossApr": 1.9422824071612717,
    "timestamp": 1660455256000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0x74f208d906f022f2ed290dfc01c9b283791ae3352f74638cbdd8b6af57323304",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 18705.595517466125,
    "apr": 44.55598222107543,
    "balance": 10000000,
    "block": 15314213,
    "earned": 1211617538.4528334,
    "grossApr": 49.50664691230604,
    "timestamp": 1660132736000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "tx": "0x99cd95c4fd0c68c963142db17be61a8c2458ff6b5acda3aabe405a644adaee93",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 8418.142660217834,
    "apr": 4.156266578506966,
    "balance": 10000000,
    "block": 15314213,
    "earned": 113021983.35608464,
    "grossApr": 4.618073976118851,
    "timestamp": 1660132736000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "tx": "0x99cd95c4fd0c68c963142db17be61a8c2458ff6b5acda3aabe405a644adaee93",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 5603.2033092929305,
    "apr": 2.285528875516314,
    "balance": 10000000,
    "block": 15312417,
    "earned": 62150731.10667718,
    "grossApr": 2.53947652835146,
    "timestamp": 1660107820000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0x56c8c982ce6efa45da0ff90383d42cc026397f3bceac93fa3c08d264aad1863c",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
]
`;

exports[`harvests.utils loadYieldEvents requesting an influence vault loads yield events from the subgraph 1`] = `
Array [
  Object {
    "amount": 18087.137228369163,
    "apr": 9.780451982747769,
    "balance": 4500000,
    "block": 15396257,
    "earned": 1171558139.6931558,
    "grossApr": 10.867168869719743,
    "timestamp": 1661253900000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "tx": "0x49730f8f1d3aa7915940ec85de53b10e5425cddbf9195c2348f779638eed14dd",
    "type": "TreeDistribution",
    "value": 291478500000,
  },
  Object {
    "amount": 8273.444229204368,
    "apr": 0.9273166679709072,
    "balance": 4500000,
    "block": 15396257,
    "earned": 111079262.22129785,
    "grossApr": 1.030351853301008,
    "timestamp": 1661253900000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "tx": "0x49730f8f1d3aa7915940ec85de53b10e5425cddbf9195c2348f779638eed14dd",
    "type": "TreeDistribution",
    "value": 291478500000,
  },
  Object {
    "amount": 4261.975371596002,
    "apr": 0.39465342497957007,
    "balance": 4500000,
    "block": 15388629,
    "earned": 47273830.821742855,
    "grossApr": 0.4385038055328557,
    "timestamp": 1661148573000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0x6902d5e3d0dc784dac28506ec173727111439ba5dd8a05cfb9c9a7f86137cab5",
    "type": "TreeDistribution",
    "value": 291478500000,
  },
  Object {
    "amount": 4223.102994638644,
    "apr": 0.3910538929865982,
    "balance": 4500000,
    "block": 15363244,
    "earned": 46842658.416531846,
    "grossApr": 0.4345043255406647,
    "timestamp": 1660800880000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0xba80fa9bdd08636514171ee7c54d6a5420d392111c4b08fa185e9677fea5d647",
    "type": "TreeDistribution",
    "value": 291478500000,
  },
  Object {
    "amount": 4285.530143667973,
    "apr": 0.39683456650722165,
    "balance": 4500000,
    "block": 15337891,
    "earned": 47535100.35356516,
    "grossApr": 0.44092729611913517,
    "timestamp": 1660455256000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0x74f208d906f022f2ed290dfc01c9b283791ae3352f74638cbdd8b6af57323304",
    "type": "TreeDistribution",
    "value": 291478500000,
  },
  Object {
    "amount": 18705.595517466125,
    "apr": 10.114877576111313,
    "balance": 4500000,
    "block": 15314213,
    "earned": 1211617538.4528334,
    "grossApr": 11.238752862345905,
    "timestamp": 1660132736000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "tx": "0x99cd95c4fd0c68c963142db17be61a8c2458ff6b5acda3aabe405a644adaee93",
    "type": "TreeDistribution",
    "value": 291478500000,
  },
  Object {
    "amount": 8418.142660217834,
    "apr": 0.9435349759924179,
    "balance": 4500000,
    "block": 15314213,
    "earned": 113021983.35608464,
    "grossApr": 1.048372195547131,
    "timestamp": 1660132736000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "tx": "0x99cd95c4fd0c68c963142db17be61a8c2458ff6b5acda3aabe405a644adaee93",
    "type": "TreeDistribution",
    "value": 291478500000,
  },
  Object {
    "amount": 5603.2033092929305,
    "apr": 0.5188494029333707,
    "balance": 4500000,
    "block": 15312417,
    "earned": 62150731.10667718,
    "grossApr": 0.5764993365926341,
    "timestamp": 1660107820000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0x56c8c982ce6efa45da0ff90383d42cc026397f3bceac93fa3c08d264aad1863c",
    "type": "TreeDistribution",
    "value": 291478500000,
  },
]
`;

exports[`harvests.utils loadYieldEvents requesting an standard vault loads yield events from the subgraph 1`] = `
Array [
  Object {
    "amount": 18087.137228369163,
    "apr": 43.08283925122179,
    "balance": 10000000,
    "block": 15396257,
    "earned": 1171558139.6931558,
    "grossApr": 47.869821390246436,
    "timestamp": 1661253900000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "tx": "0x49730f8f1d3aa7915940ec85de53b10e5425cddbf9195c2348f779638eed14dd",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 8273.444229204368,
    "apr": 4.084825017457429,
    "balance": 10000000,
    "block": 15396257,
    "earned": 111079262.22129785,
    "grossApr": 4.538694463841588,
    "timestamp": 1661253900000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "tx": "0x49730f8f1d3aa7915940ec85de53b10e5425cddbf9195c2348f779638eed14dd",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 4261.975371596002,
    "apr": 1.7384462495527824,
    "balance": 10000000,
    "block": 15388629,
    "earned": 47273830.821742855,
    "grossApr": 1.931606943947536,
    "timestamp": 1661148573000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0x6902d5e3d0dc784dac28506ec173727111439ba5dd8a05cfb9c9a7f86137cab5",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 4223.102994638644,
    "apr": 1.7225903301631276,
    "balance": 10000000,
    "block": 15363244,
    "earned": 46842658.416531846,
    "grossApr": 1.9139892557368086,
    "timestamp": 1660800880000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0xba80fa9bdd08636514171ee7c54d6a5420d392111c4b08fa185e9677fea5d647",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 4285.530143667973,
    "apr": 1.7480541664451443,
    "balance": 10000000,
    "block": 15337891,
    "earned": 47535100.35356516,
    "grossApr": 1.9422824071612717,
    "timestamp": 1660455256000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0x74f208d906f022f2ed290dfc01c9b283791ae3352f74638cbdd8b6af57323304",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 18705.595517466125,
    "apr": 44.55598222107543,
    "balance": 10000000,
    "block": 15314213,
    "earned": 1211617538.4528334,
    "grossApr": 49.50664691230604,
    "timestamp": 1660132736000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "tx": "0x99cd95c4fd0c68c963142db17be61a8c2458ff6b5acda3aabe405a644adaee93",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 8418.142660217834,
    "apr": 4.156266578506966,
    "balance": 10000000,
    "block": 15314213,
    "earned": 113021983.35608464,
    "grossApr": 4.618073976118851,
    "timestamp": 1660132736000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "tx": "0x99cd95c4fd0c68c963142db17be61a8c2458ff6b5acda3aabe405a644adaee93",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
  Object {
    "amount": 5603.2033092929305,
    "apr": 2.285528875516314,
    "balance": 10000000,
    "block": 15312417,
    "earned": 62150731.10667718,
    "grossApr": 2.53947652835146,
    "timestamp": 1660107820000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "tx": "0x56c8c982ce6efa45da0ff90383d42cc026397f3bceac93fa3c08d264aad1863c",
    "type": "TreeDistribution",
    "value": 66170000000,
  },
]
`;
